# StockII

./: .gitignore  dbconfig.toml  docker-compose.yml  pyproject.toml  setup.py
stock/: config.py  paths.py
stock/analytics/: Dockerfile  alphavantage.py  analytics_api.py  backtest.py  error.py  machine_learning.py  settings.toml  signals.py  tech_analysis.py
stock/database/: db_models.py
stock/get/: alphavantage.py
stock_II/analysis/: machine_learning.py
